# agentic-template

./: .dockerignore  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  run_server.py
.github/workflows/: test.yml
docker/: Dockerfile  Dockerfile.agentic  Dockerfile.multiagent  README.md  docker-compose.yml  start-services.bat  start-services.sh  test_integration.py
src/agentic_template/: __init__.py  agent.py
src/multiagent_template/: README.md  __init__.py  agents.py  example.py  main.py  trading_system.py
src/server/: __init__.py  main.py
src/server/multiagent_api/: README.md  __init__.py  example_usage.py  main.py  run_server.py
tests/: __init__.py  test_agent.py  test_multiagent.py  test_multiagent_api.py  test_server.py
