[project]
name = "agentic-template"
version = "0.1.0"
description = "Starter Kit for Building AI Agents with LangChain"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_template", "src/server", "src/multiagent_template"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests",
    "docker"
]
